[package]
name = "task_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
